--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -715,7 +715,6 @@
                         <property name="can_focus">False</property>
                         <property name="label_xalign">0</property>
                         <property name="shadow_type">in</property>
-                        <signal name="configure-event" handler="annotations.on_configure_annot" swapped="no"/>
                         <child>
                           <object class="GtkScrolledWindow" id="scrolled_window">
                             <property name="visible">True</property>
@@ -723,33 +722,15 @@
                             <property name="min_content_width">10</property>
                             <property name="min_content_height">10</property>
                             <child>
-                              <object class="GtkTreeView" id="scrollable_treelist">
+                              <object class="GtkTextView" id="annotations_textview">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="headers_visible">False</property>
-                                <property name="headers_clickable">False</property>
-                                <property name="enable_search">False</property>
-                                <property name="show_expanders">False</property>
-                                <child internal-child="selection">
-                                  <object class="GtkTreeSelection" id="treeview-selection1">
-                                    <property name="mode">none</property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="GtkTreeViewColumn">
-                                    <property name="sizing">autosize</property>
-                                    <property name="fixed_width">1</property>
-                                    <property name="title" translatable="yes">column</property>
-                                    <child>
-                                      <object class="GtkCellRendererText" id="annotation_renderer">
-                                        <property name="wrap_mode">word-char</property>
-                                      </object>
-                                      <attributes>
-                                        <attribute name="text">0</attribute>
-                                      </attributes>
-                                    </child>
-                                  </object>
-                                </child>
+                                <property name="has_focus">True</property>
+                                <property name="editable">False</property>
+                                <property name="wrap_mode">word</property>
+                                <property name="cursor_visible">False</property>
+                                <property name="accepts_tab">False</property>
+                                <property name="monospace">True</property>
                               </object>
                             </child>
                           </object>
