Add big button to toggle pointer off <-> {manual or always}
Close #147. Toggle is as before with the l shortcut:
- it the pointer is not off, switch it off
- it the pointer is off, switch it back to the last non-off status

--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -976,6 +976,25 @@
               </packing>
             </child>
             <child>
+              <object class="GtkButton" id="laser_button">
+                <property name="label" translatable="yes">Pointer</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="margin_top">10</property>
+                <style>
+                  <class name="info-label"/>
+                </style>
+                <signal name="clicked" handler="laser.toggle_pointermode" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="padding">2</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkFrame" id="frame_time">
                 <property name="width_request">170</property>
                 <property name="visible">True</property>
@@ -1012,7 +1031,7 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">4</property>
+                <property name="position">5</property>
               </packing>
             </child>
             <child>
@@ -1058,7 +1077,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">5</property>
+                <property name="position">6</property>
               </packing>
             </child>
             <child>
@@ -1097,7 +1116,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">6</property>
+                <property name="position">7</property>
               </packing>
             </child>
           </object>
