Add Libreoffice mode of slide pages, called AFTER #171
Slides are the first half of the pdf pages.
Notes are the second half of the pdf pages.

Implement as a notes position, enable autodetection.

--- a/pympress/share/css/default.css
+++ b/pympress/share/css/default.css
@@ -9,8 +9,8 @@
     background-color: #fff;
 }
 
-#annotations_textview span text {
-  background: #555555;
+#annotations_textview {
+  font-size: 1.4em;
 }
 
 #p_win GtkPaned .pane-separator {
